[tool.poetry]
name = "engie"
version = "0.1.0"
description = ""
authors = ["Jan Willems <jan.willems@elevenbits.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
fastapi = {extras = ["all"], version = "^0.87.0"}
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
httpie = "^3.2.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
